--- a/style.css
+++ b/style.css
@@ -20,12 +20,14 @@
 
 .box-1 {
     order: 5;
+    background-color: aliceblue;
   
 }
 
 .box-2 {
     order: 3;
     align-self: stretch;
+    background-color: aliceblue;
  
 }
 
